--- a/public/css/survey-styles.css
+++ b/public/css/survey-styles.css
@@ -8,6 +8,18 @@ label {
   text-align: center;
 }
 
+.spacer {
+  height: 100px;
+}
+
 label {
   display: block;
+}
+
+.suggestions {
+  text-align: center;
+}
+
+textarea {
+  width: 50%;
 }
